<resources>
    <string name="app_name">AppInventario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="logoarca">logoArca</string>
    <string name="iconoapp">iconoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mantenimiento_">Mantenimiento_Activity</string>
    <string name="tab_text_1">Proveedor</string>
    <string name="tab_text_2">Usuario</string>
    <string name="tab_text_3">Activo</string>
    <string name="tab_text_4">Almacen</string>
    <string name="nombre">Nombre:</string>
    <string name="guardar">Guardar</string>
    <string name="ruc">RUC:</string>
    <string name="icono_proveedor">Icono Proveedor</string>
    <string name="ruc_proveedor">Ruc Proveedor</string>
    <string name="nombre_proveedor">Nombre Proveedor</string>
    <string name="cancelar">Cancelar</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="proveedor">Proveedor</string>
    <string name="usuarios">Usuarios</string>
    <string name="activo">Activo</string>
    <string name="almacenes">Almacén</string>
    <string name="title_activity_admin">AdminActivity</string>
</resources>